fix broken css property names

--- a/frontend/stylesheets/trace_view/_tracing_view.less
+++ b/frontend/stylesheets/trace_view/_tracing_view.less
@@ -300,8 +300,8 @@ img.keyboard-mouse-icon:first-child {
   position: fixed;
   height: @navbar-height;
   display: flex;
-  alignitems: center;
-  whitespace: nowrap;
+  align-items: center;
+  white-space: nowrap;
 }
 
 .navbar-header,
